--- a/entry/src/main/js/default/pages/index/index.css
+++ b/entry/src/main/js/default/pages/index/index.css
@@ -1,57 +1,187 @@
-.container {
+.index{
+    height: 100%;
+    width: 100%;
     display: flex;
+    background-color: #4E5B92;
     flex-direction: column;
+}
+
+.background-main{
+    background-color: #4E5B92;
+    height: 80px;
+    width: 100%;
+    flex-grow: 0;
+    display: flex;
+}
+
+.main-container{
+    background-color: #EFEDF4;
+    display: flex;
+    flex-grow: 1;
+    border-radius: 0px 0px 24px 24px;
+    align-items: flex-start;
+    flex-direction: column;
+}
+
+.app-title{
+    color: #ffffff;
+    text-align: left;
+    font-family:sans-serif;
+    font-size: 24px;
+    line-height: 32px;
+    font-weight: 500;
+    display: flex;
+    position: absolute;
+    left: 16px;
+    top: 32px;
+    align-items: center;
+    justify-content: center;
+}
+
+.page-title{
+    color: #000000;
+    text-align: left;
+    font-family: sans-serif;
+    font-size: 14px;
+    line-height: 20px;
+    font-weight: 500;
+    width: 100%;
+    padding-left: 16px;
+    padding-top: 20px ;
+    display: flex;
+}
+
+.search-area{
+    background-color: #fbf8ff;
+    border-radius: 24px 24px 24px 24px;
+    height: 160px;
+    width: 100%;
+    display: flex;
+    margin-top:16px;
+    margin-left: 16px;
+    margin-right: 16px;
+    padding: 16px;
+    flex-direction: row;
+}
+
+
+.station-area{
+    height: 100%;
+    display: flex;
+    flex-grow: 1;
+    flex-direction: column;
+}
+
+.start-align{
+    width: 100%;
+    display: flex;
+    height: 32px;
+    align-items: center;
+}
+
+.start-icon{
+    width: 24px;
+    height: 24px;
+}
+
+.start-title{
+    color: #000000;
+    text-align: left;
+    font-family: 'Roboto-Medium', sans-serif;
+    font-size: 11px;
+    line-height: 16px;
+    font-weight: 500;
+    width:42px;
+    margin-left: 4px;
+}
+
+.start-setting{
+    color: #5a5d72;
+    background-color: #fbf8ff;
+    text-align: left;
+    font-family: sans-serif;
+    font-size: 12px;
+    font-weight: 400;
+    width: 100%;
+    display: flex;
+    padding-left: 4px;
+    border-radius: 10px;
+}
+
+.station-divider{
+    border-style: solid;
+    border-color: #767680;
+    border-width: 1px 0 0 0;
+    margin-left: 12px;
+    width: 100%;
+    height: 2px;
+}
+
+.icon-area{
+    width: 32px;
+    flex-grow: 0;
+    height: 100%;
     justify-content: center;
     align-items: center;
-    left: 0px;
-    top: 0px;
-    width: 100%;
-    height: 100%;
 }
 
-.title {
-    font-size: 40px;
-    text-align: center;
-    width: 100%;
-    height: 40%;
-    margin: 10px;
+.swapicon{
+    width: 24px;
+    height: 24px;
 }
 
-.BottomNavs{
+.cardbutton{
+    background-color: #535a92;
+    color: #ffffff;
+    width: 100%;
+    height: 40px;
+    margin-left: 16px;
+    margin-right: 16px;
+    margin-top: 16px;
+}
+
+.train-infos{
+    flex-grow: 1;
     display: flex;
     width: 100%;
+}
 
+.NavBottons{
+    height: 48px;
+    width: 100%;
+    flex-grow: 0;
+    align-items: center;
+    justify-content:space-around;
 }
-.NavButton{
-    width: 128px;
-    height: 64px;
 
+.NavBotton{
+    height: 100%;
+    width:60px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
 }
-@media screen and (device-type: tablet) and (orientation: landscape) {
-    .title {
-        font-size: 100px;
-    }
+
+.buttonimage{
+    width: 24px;
+    height: 24px;
 }
-@media screen and (device-type: wearable) {
-    .title {
-        font-size: 28px;
-        color: #FFFFFF;
-    }
+
+.buttontext-on{
+    color: #535a92;
+    text-align: left;
+    font-family: 'Roboto-Medium', sans-serif;
+    font-size: 14px;
+    line-height: 20px;
+    font-weight: 500;
 }
-@media screen and (device-type: tv) {
-    .container {
-        background-image: url("/common/images/Wallpaper.png");
-        background-size: cover;
-        background-repeat: no-repeat;
-        background-position: center;
-    }
-    .title {
-        font-size: 100px;
-        color: #FFFFFF;
-    }
-}
-@media screen and (device-type: phone) and (orientation: landscape) {
-    .title {
-        font-size: 60px;
-    }
+
+.buttontext{
+    color: #5a5d72;
+    text-align: left;
+    font-family: 'Roboto-Medium', sans-serif;
+    font-size: 14px;
+    line-height: 20px;
+    font-weight: 500;
 }
