--- a/entry/src/main/js/default/pages/info/info.css
+++ b/entry/src/main/js/default/pages/info/info.css
@@ -38,6 +38,13 @@
     justify-content: center;
 }
 
+.title-area{
+    width: 100%;
+    height: 48px;
+    display: flex;
+    flex-grow: 0;
+}
+
 .page-title{
     color: #000000;
     text-align: left;
@@ -54,6 +61,7 @@
 .info-area{
     flex-grow: 1;
     width: 100%;
+    margin-top: 8px;
     padding-left: 16px;
     padding-right: 16px;
     flex-direction: column;
@@ -100,7 +108,7 @@
 }
 
 .NavBottons{
-    height: 48px;
+    height: 56px;
     width: 100%;
     flex-grow: 0;
     align-items: center;
