--- a/entry/src/main/js/Card2X2/pages/index/index.css
+++ b/entry/src/main/js/Card2X2/pages/index/index.css
@@ -21,11 +21,27 @@
     width: 70%;
     display: flex;
     flex-direction: column;
+    align-items: center;
+    justify-content: center;
+}
+
+.top-right{
+    height: 100%;
+    width: 30%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+}
+
+.icon{
+    width: 24px;
+    height: 24px;
 }
 
 .half-left{
     width: 100%;
-    height: 40%;
+    height: 50%;
 }
 
 .station{
