--- a/entry/src/main/js/Card2X4/pages/index/index.css
+++ b/entry/src/main/js/Card2X4/pages/index/index.css
@@ -27,14 +27,29 @@
 
 .top-left{
     height: 100%;
-    width: 70%;
+    width: 60%;
     display: flex;
     flex-direction: column;
+    align-items: center;
+    justify-content: center;
+}
+.top-right{
+    height: 100%;
+    width: 40%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+}
+
+.icon{
+    width: 48px;
+    height: 48px;
 }
 
 .half-left{
     width: 100%;
-    height: 40%;
+    height: 50%;
 }
 
 .station{
